--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="form-container__footer">
                     <p class="form-container__text">Еще не зарегистрированы?</p>
-                    <button href="#" class="form__button form-container__button">Зарегистрироваться</button> 
+                    <a href="./registration.html" class="form__button form-container__button" onclick="if(!window.barba || !window.barba.go) window.location.href='./registration.html'">Зарегистрироваться</a> 
                 </div>
             </div>
 
